<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">On The Watch</string>
    <string name="hello_world">Hello world!</string>
    <string android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" name="title">On The Watch</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="Subscribe">Subscribe</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="Sunday">S</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="Monday">M</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="Tuesday">T</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="Wednesday">W</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="Thursday">Th</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="Friday">F</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="Saturday">S</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date1">1</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date2">2</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date3">3</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date4">4</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="date5">5</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="date6">6</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date7">7</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date8">8</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="date9">9</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date10">10</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="date11">11</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date12">12</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="date13">13</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="date14">14</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="date15">15</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date16">16</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date17">17</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="date18">18</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="date19">19</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="date20">20</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="date21">21</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="date22">22</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date23">23</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date24">24</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="date25">25</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="date26">26</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="date27">27</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="date28">28</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="date29">29</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="date31">31</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="date30">30</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="month">September</string>

</resources>
