<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74EEFD"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/fributt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wedbutt"
        android:layout_alignBottom="@+id/wedbutt"
        android:layout_toLeftOf="@+id/satbutt"
        android:textStyle="bold"
        android:text="@string/Friday" />

    <Button
        android:id="@+id/satbutt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fributt"
        android:layout_alignBottom="@+id/fributt"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:text="@string/Saturday" />

    <Button
        android:id="@+id/sunbutt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/subbutt"
        android:textStyle="bold"
        android:text="@string/Sunday" />

    <Button
        android:id="@+id/monbutt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/sunbutt"
        android:textStyle="bold"
        android:text="@string/Monday" />

    <Button
        android:id="@+id/tuebutt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/monbutt"
        android:textStyle="bold"
        android:text="@string/Tuesday" />

    <Button
        android:id="@+id/wedbutt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tuebutt"
        android:textStyle="bold"
        android:text="@string/Wednesday" />

    <Button
        android:id="@+id/thubutt"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/wedbutt"
        android:textStyle="bold"
        android:text="@string/Thursday" />

    <Button
        android:id="@+id/button8"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fributt"
        android:layout_toLeftOf="@+id/satbutt"
        android:text="@string/date1" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/satbutt"
        android:text="@string/date2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/date8" />

    <Button
        android:id="@+id/button1"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignParentRight="true"
        android:text="@string/date9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thubutt"
        android:layout_below="@+id/button8"
        android:text="@string/date7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/button7"
        android:text="@string/date6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/button6"
        android:text="@string/date5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/date4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/monbutt"
        android:text="@string/date3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:text="@string/date10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/date30" />

    <Button
        android:id="@+id/button13"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignParentBottom="true"
        android:text="@string/date29" />

    <Button
        android:id="@+id/button15"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignParentBottom="true"
        android:text="@string/date28" />

    <Button
        android:id="@+id/button10"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button5"
        android:text="@string/date27" />

    <Button
        android:id="@+id/button17"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button10"
        android:text="@string/date26" />

    <Button
        android:id="@+id/button11"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/date25" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button11"
        android:text="@string/date24" />

    <Button
        android:id="@+id/button14"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:layout_toRightOf="@+id/button13"
        android:text="@string/date23" />

    <Button
        android:id="@+id/button18"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button14"
        android:layout_alignBottom="@+id/button14"
        android:layout_alignLeft="@+id/button13"
        android:text="@string/date22" />

    <Button
        android:id="@+id/button16"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button15"
        android:layout_toRightOf="@+id/button10"
        android:text="@string/date21" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button16"
        android:layout_alignBottom="@+id/button16"
        android:layout_toLeftOf="@+id/button16"
        android:text="@string/date20" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button17"
        android:layout_toRightOf="@+id/button11"
        android:text="@string/date19" />

    <Button
        android:id="@+id/button23"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/date18" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_toLeftOf="@+id/button11"
        android:text="@string/date17" />

    <Button
        android:id="@+id/button19"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button18"
        android:text="@string/date16" />

    <Button
        android:id="@+id/button20"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button19"
        android:layout_alignBottom="@+id/button19"
        android:layout_alignLeft="@+id/button18"
        android:text="@string/date15" />

    <Button
        android:id="@+id/button21"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button20"
        android:layout_alignBottom="@+id/button20"
        android:layout_alignLeft="@+id/button16"
        android:text="@string/date14" />

    <Button
        android:id="@+id/button22"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button21"
        android:layout_alignBottom="@+id/button21"
        android:layout_toLeftOf="@+id/button16"
        android:text="@string/date13" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button22"
        android:layout_alignBottom="@+id/button22"
        android:layout_toRightOf="@+id/button23"
        android:text="@string/date12" />

    <Button
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/date11" />

    <Button
        android:id="@+id/monthbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subbutt"
        android:text="@string/month"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sunbutt"
        android:layout_alignBottom="@+id/sunbutt"
        android:layout_alignParentLeft="true"
        android:text="@string/Subscribe"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/monthbutt"
        android:text="2013"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>